...
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:text="task status"
            android:textStyle="italic" />

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="301dp" />


    </LinearLayout>
...
